# structural-computing-bench

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
bench/: __init__.py  calibrate.py  fits.py  orchestrator_analytics.py  problems.py  render.py  timing.py
calibration_data/: README.md  default.py
scripts/: run_calibration.py
tests/: test_calibrate.py  test_fits.py  test_orchestrator_analytics.py  test_problems.py  test_timing.py
